# levelset2d_polygon

./: .gitignore  CMakeLists.txt  README.md
analysis/: CMakeLists.txt  corner_chamfer_analysis.cpp
examples/: CMakeLists.txt  roundtrip_demo.cpp
include/levelset2d_polygon/: levelset2d_polygon.hpp  marching_squares.hpp  polygon_extractor.hpp
include/levelset2d_polygon/detail/: corner_sharpening.hpp  dual_contouring.hpp  marching_squares.hpp  marching_squares_impl.hpp  polygon_extractor_impl.hpp  rectilinear_threshold.hpp  surface_nets.hpp
tests/: CMakeLists.txt  test_marching_squares.cpp  test_polygon_extractor.cpp
